Added new Patch Notes

--- a/index.html
+++ b/index.html
@@ -139,6 +139,239 @@
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 9/2/2022</small>
+              <p>
+                The Steam Update
+              </p> 
+              <p>
+                It’s Christmas in August September!! Thanks for sticking with us over the last 4 years and showing your support through many hours logged, being active on Discord, and purchasing dem tonks.
+                 This update has a lot of changes with Steam update in mind – new features, a smoother leveling experience, and automated token purchasing, to name a few. 
+                 Below are the changes in this patch; there are many new features, changes and balance adjustments - especially regarding alignment on the rules for the new server Ascension. 
+                 Read more for what’s new in this build. As always…good luck, and happy hunting!! 😉
+              </p>
+              <ul>
+                ==System Changes==
+                <li>Pixel Mine Launcher is NO LONGER functional. Use STEAM to launch the games (you are given 5 chances upon launching game to bind to our system, so know your account info please!) </li>
+                <li>Secure.pixelminegames.com will NO LONGER be functional. When we are done with migration, please use CUSTOMER.IRONWILLGAMES.COM (login through steam)</li>
+                <li>Bug report in game will direct to tickets</li>
+                <li>Payments are now launched from the game store, and completed in Steam. We cannot assist you with Steam payments.</li>
+              </ul>
+              ==New Features==
+              <ul>
+                <li>New combat target reticule</li>
+                <li>Improved GUI saving/loading</li>
+                <li>Snap to Windows</li>
+                <li>Cast buffs/heals in Party Window</li>
+                <li>Changed from DirectDraw to Direct3D graphics engine </li>
+                <li>Server Select screen grid instead of hard-coded art icons</li>
+                <li>Drop to destroy now disabled except for NO DROP items; when dropping an item on ground, you will not receive a warning message unless it’s a NO DROP item. All items will be placed on ground and cleaned up by the server every ~10 min or so.</li>
+                <li>Trash Barrels – placed near banks in most cities. Trash around barrel to denote their function. Once used, anything inside is consumed/destroyed. To assist in quick removal of items. This is my finest accomplishment. If only I could put myself into it.</li>
+                <li>Ability for designers to disable taskmasters per server</li>
+              </ul>
+              ==Zoning/Alignment==
+              <ul>
+                <li>Majority of Krog/Silvest/Whisperdale areas are now safe zones. This extends to an obvious physical barrier such as a river crossing or mountain pass/choke. In Silvest, this is at the guard gate before going to Varg. In Krog, this is at the river crossing on the way to Dawat/VF. In Whisperdale, it is the river crossing just before Darkfell and the mountain pass near Ewwww’s lair. Below ground areas accessible there also safe zones. This extends to all servers where safe zones are enabled (H/L/Ascension). As patron saint of newbs everywhere, I give my blessing to these areas.</li>
+                <li> Majority of cities changed to Divine (white) alignment from Neutral (yellow). Alignment will be more useful moving forward. PLEASE be careful when logging in if you are evil or worse (orange/red names)
+                  <ul>
+                    <li>Evil Cities: LOPAL, MEROVEN, GRELL, DARUSHK, SYLDURAL, DESPRAIL, RAHURA, REDWAKE</li>
+                    <li>Neutral Cities: GULLEY, DARKFELL, DUREMAR, NEW ROYALE, VARG, VRETHPOOL</li>
+                    <li>Good Cities: CHLERA, CLIFFSIDE, DUNMARROW, KHAFRA, NEWTOWN</li>
+                    <li>Divine Cities: All other not here named</li>
+                  </ul>
+                </li>
+                <li>Ability for designers to set alignment gain chance per server to assist in making alignment more useful (H/L unchanged, A server will have random chance to gain alignment per kill)</li>
+                <li>Ability for designers to set backpack drop based on alignment to assist in making alignment more useful (H/L unchanged, A server will have reduced chance to drop backpack for players with better reputation)</li>
+              </ul>
+              ==More Alignment==
+              <ul>
+                <li>Killing neutral or better NPCs will lower your reputation</li>
+                <li>Evil or worse players have options for various NPCs that are found in LSP in the evil cities of Lopal/Redwake:
+                  <ul>
+                    <li>Lopal: TMs, VIP Soulstone </li>
+                    <li>Rahura: Construction sales, Advanced Skills Trainer</li>
+                    <li>Redwake: Dark Steward (city align reset), Henchmen and Familiar trainers, ToF raft offer, VIP Store </li>
+                  </ul>
+                </li>
+                <li>Where enabled, good or better players do not take reputation loss for killing evil or worse reputation player</li>
+                <li>Killing another player will result in a loss of reputation (varying per server)</li>
+                <li>Death as an evil or worse player when NOT wanted will send you to a crim spawn gate</li>
+                <li>VIP Soulstone will send to Lopal tavern instead of LSP if you are evil or worse</li>
+              </ul>
+              ==Spawns==
+              <ul>
+                <li>Redid a significant number of spawns in starter areas of Krog/Whisperdale/Silvest and updated the Patron quest system to reflect what is actually in the area</li>
+                <li>Adjust to WW Matriarch spawn; slight respawn, more areas, and chance to spawn while killing pups</li>
+                <li>Adjusted spawn of gloom lights in marsh dungeon</li>
+                <li>Added Drakkan mini dungeon for undead <<< of Krog</li>
+                <li>Adjusted spawn of slimes/sludges/molds (now only spawn in silvest/krog/whisperdale respectively) and adjusted krog sewer</li>
+                <li>Adjust to scorched island - lower level mobs near entrance, higher level in back. It’s like a mullet, but with Lava Blobs</li>
+               </ul>
+               ==Drops==
+               <ul>
+                <li>Adjusts to a lot of bosses drop rates/tables/treasure tables. Don’t ask! I don’t even remember.
+                  <ul>
+                    <li>Dragons/Dragon Bosses</li>
+                    <li>Kuthos Dungeon</li>
+                    <li>Ancient Giants</li>
+                    <li>TR bosses (Artraxis, Kritan, Thrakk, Yesoth</li>
+                  </ul>
+                </li>
+                <li>Crypt guardian sets dropping from basilisks and medukala stonegazer</li>
+                <li>Added Totem of the Wolf to various creatures: dire wolves, wolverines, skeleton and dwarven pirates, higher level VF mobs, sand spider</li>
+                <li>Updated Dalvon Mine encounters and boss/foreman treasure chances to discourage players camping master blaster. He’s a quest update for heaven’s sake.</li>
+                <li>Plague Toads/Grizzly Bears drops changed to Valinor level drops – hunt something else for magic trade tools!</li>
+                <li>Reduced chance on cloud strike drop from Proudbloods (was too high)</li>
+                <li>Rock trolls no longer drop the scroll needed to hunt them; xp on that scroll quest reduced slightly</li>
+                <li>Two new Scroll Quests for evil players (Stop the Greedy Gluttons, Secrets of Vampire Bats) which can be turned in to Redwake and Broken Finger Outpost, respectively.</li>
+                <li>Removed silver band from tier 0 (TR item)</li>
+              </ul>
+              ==Items==
+              <ul>
+                <li>Added stats to Wizard Helm (+5 Mage Weap and +5 Mind, added some resists)</li>
+                <li>Added resists to Golden Elven Shield so it’s more interesting, shiny, and shielding, and elven</li>
+                <li>Wicked Looking Wand given additional to hit and 1 rune slot</li>
+                <li>Wand of Expansion now adds 10% bonus to lacerate in addition to brain freeze</li>
+                <li>Level Reqs set for various high end weaps (106+ atm)</li>
+                <li>Legacy Cloak now available for Legacy account holders (you just need to talk to Mage of Lotor which is located in town hall of Krog, Silvest, and Whisperdale; if your account predates 9/2 you are eligible for free no drop cloak - one per char)</li>
+                <li>Loafers 🥖</li>
+                <li>New TR Items: Wyvern Sight, Wyvern’s Talons, Wyvern’s Eye, Warding Amulet of the North, Crystalcloth Belt/Boots, Tormented Set (Req level 85, 50 Int/30 Con)</li>
+              </ul>
+              ==More Items==
+              Item Adjusts:
+              <ul>
+                <li>Adjusted INT req on Staff of Impure (down to 70)</li>
+                <li>Adjusted req on Cursed Flaming Quarterstaff (30STR/70INT)</li>
+                <li>Adjusted INT req on Azure set (down to 70)</li>
+                <li>Adjusted req on Axe of Betrayal (70STR/70INT/0DEX)</li>
+                <li>Adjusted req on Hammer of Ancient Gods (100STR/70INT)</li>
+                <li>Adjusted req on Knightcaster set (100STR/70INT)</li>
+                <li>Wolf Pup and Wolf Totem timer increased to 30/60 min respectively (from 1/2 min)</li>
+                <li>Removed Dex req on Oken's wand</li>
+                <li>Increased Rune Slots on Oken's Wand and added 10 Crit Blast</li>
+                <li>Increased Rune Slots on Crossbow of Mana and Bow of Nature</li>
+                <li>Inc bonuses to Robe of Dark Rites (52 AC, 20 STR, 28 INT)</li>
+                <li>Inc bonuses to Ritual Sheers (22 INT, 8 CON)</li>
+                <li>Inc bonuses to Ritual Hood (7 CON)</li>
+                <li>Inc bonuses to Ritual Boots (8 CON)</li>
+                <li>Inc CON bonus to Sorcerer's Tunic and Robe (10 CON)</li>
+                <li>Inc value of Blade of Ancients to something that can't be transmuted</li>
+                <li>Reqs on HOTAG fixed (1oo str/70 INT)</li>
+                <li>Lost Adventurer's Signet ring had STR req of 65, changed to overall level 65 req</li>
+                <li>WhiteStar shield</li>
+                <li>Corrupted Helm</li>
+                <li>Shield of Blocking</li>
+                <li>Belt of Striking</li>
+                <li>Forsaken Shield</li>
+                <li>Crystal Amulet</li>
+                <li>Thrakk's Belt</li>
+                <li>Thrakk's Gauntlets of Might</li>
+                <li>Cape of Storms</li>
+                <li>Library Book</li>
+                <li>Indoel's Tooth Pendant</li>
+                <li>Captain's Medallion</li>
+                <li>Torn Sinew Shoes</li>
+                <li>Reduced CON on Bloody Rag of Rumpda</li>
+                <li>Added weapon special for Blade of the Wyvern, Mallet of Reckoning, Dirk of the Unleashed, Edge of the slayer, Frostbow, Deathmaul, Warmage Scathing Axe, Sword of Artraxis (TR items)</li>
+              </ul>
+              ==Food==
+              Enough changs here it warranted its own section
+              <ul>
+                <li>Added tooltips to most foods, drinks, potions</li>
+                <li>Adjusted a few consumables
+                  <ul>
+                    <li>All brewed drinks last 1 hour instead of 30 min, you lightweights</li>
+                    <li>Chlera Hard Cider gives Stam Regen and Dex vs just Dex</li>
+                    <li>Hobgoblin Strong Ale gives +5 str/con vs +4</li>
+                    <li>Northern Frost Mead gives +10% Health Regen vs 5%</li>
+                    <li>Cooked Purker gives 2 Con 2 Int (purker up :-*)</li>
+                    <li>Cooked Casucs gives 1 Dex 1 Stam Regen</li>
+                    <li>Orange Snagger gives +3 Str +3 Con</li>
+                    <li>Speckled Tithia gives +4 Int +2 Con vs just Int</li>
+                    <li>Jester Fish gives +3 Dex and +10% Health Regen (I had to work to restrain myself from bad jokes)</li>
+                    <li>Redfin Bloater gives +2 Str/Dex/Int vs 2 int/con</li>
+                    <li>Dragonhead Perch gives +3 Str +2 Con +10 Health Regen</li>
+                    <li>Apple gives +2 Con</li>
+                    <li>Potatoes give 50 HP</li>
+                    <li>Carrots give +2 to hit</li>
+                    <li>Lime gives 25 HP</li>
+                    <li>Lemon gives 5% disease resist</li>
+                    <li>Cherries give +2 Dex</li>
+                    <li>Coconut can be eaten; gives +2 Dex +1 Stam Regen</li>
+                    <li>Milk food effect doubled from 10 min to match other similar foods</li>
+                  </ul>
+                </li>
+              </ul>
+              ==Crafting==
+              <ul>
+                <li>Oil of Jandros now does a shield effect (mitigation)</li>
+                <li>Poison Potions/Disease potions instruct player to apply to a weapon</li>
+                <li>Low level Alchemy adjust; all minor potions now require level 14 or less; updated potion recipes included in Alchemy guidebook (bought from both valinor and normal mage shop)</li>
+                <li>Potion Minor Repair: skill level down to 14; used to be 2 warg teeth/1 storm giant blood, now 2 warg teeth/1 rat tail</li>
+                <li>Potion of Cure Minor Disease: used to be Scorpion Sting/Deadroot/Enchanted Bloodroot, now Scorpion Sting/Ant Leg/Enchanted Bloodroot</li>
+                <li>Potion of Minor Disease: Skill level down to 12</li>
+                <li>Potion of Minor Poison: skill level down to 10; used to be 1 Scorpion Sting/2 Sulphur Crystals/1 Deadroot; now 1 Scorpion Sting/2 Ant leg</li>
+                <li>Valinor now includes all mobs or needed drops to make minor potions (warg teeth drop from shaman runts, all others dropped from the relevant mobs)</li>
+                <li>Changed color of text when adding ingredients to alchemist’s mortar so it stands out more “You have added ear of bat..” at least until I can burn that script down with fire and in its ashes raise the PHOENIX Crafting Manager 🤩</li>
+              </ul>4
+              ==Quests==
+              <ul>
+                <li>Patrons give 1 scroll of return every so often for their city</li>
+                <li>Added pointers to dialogue on Val Clockworks</li>
+                <li>Adjust on Rineguile quest - chance to get slime from slugs increased</li>
+                <li>Fixed an exploit in all of the newbie trainer quests</li>
+                <li>Fixed the Nova quest</li>
+                <li>Fix for Chaos Knight script (players had to relog to take a new quest after turning in)</li>
+                <li>Fix for Patron quests if you changed city faction using Knight of Lotor (instead of store item)</li>
+                <li>Fixed Knight of Lotor script when player abandons city faction (was not resetting everything it needed to)</li>
+                <li>More hints/instruction on what to do next when leaving Valinor/completing high level patron quests</li>
+              </ul>
+              ==Various Bug Fixes==
+              <ul>
+                <li>Several fixes for char create screen (non clickable regions, various crashes)</li>
+                <li>Incorrect targeting feedback when creature is not in line of sight but in range</li>
+                <li>Fixes for various connection failures</li>
+                <li>Hunter’s Handbook entry box retained focus even when not selected</li>
+                <li>Hotbars difficult to change orientation. Now right click to change orientation.</li>
+                <li>Clicking repair potions too fast bugs the cursor</li>
+                <li>Buying large stacks of items crashes the client</li>
+                <li>Magic Missile doesn’t work if a class rune is not equipped</li>
+                <li>Drag to ground/destroy sometimes shows wrong item</li>
+                <li>Can attack dynamic quest NPCs in safe zones</li>
+                <li>Warning message on gated triggers spams the client</li>
+                <li>Sound can be heard when boxes checked but volume set to 0</li>
+                <li>Auto target was not work properly when play area not in default location</li>
+                <li>When player gets treasure in party, color of chat to player is not correct</li>
+                <li>When a random name is generated, make sure it isn’t already in use</li>
+                <li>When a party members leaves your party while you are logging out, your logout is aborted</li>
+                <li>Self click no longer opens/closes backpack</li>
+                <li>Trade tables no longer close any open containers</li>
+                <li>~ was not working on some international keyboards</li>
+                <li>Ranged/Melee autotarget selects followers when they are in range/adjacent</li>
+                <li>Major refactor/fixup of Feats window</li>
+                <li>Projectiles ie arrows now draw properly if play area moved</li>
+                <li>Client now given a proper name, Ashen Empires</li>
+              </ul>  
+              ==Junk Drawer==  
+              <ul>  
+                <li>Added ladder in Orc Fort Tunnel to a previously inaccessible area</li>
+                <li>Dungeons of Dransik is now completely disabled; any products related to it (teleport stones, portals, bindings, etc) are now not functional. We are not able to support this extension any longer.</li>
+                <li>Updated HELP section of ESC menu with some recent info/changes/updates</li>
+                <li>Typo Resurected > Resurrected</li>
+                <li>Gazelle antlers not marked as ToF expansion item</li>
+                <li>Wizard Familiar no longer a controllable mob</li>
+                <li>More tutorial print added to Valinor</li>
+                <li>Adjust to Ice Bolt to make it more interesting.</li>
+                <li>Switched tile shape for decaying body from headstone to skeleton</li>
+                <li>Fix for Map Travelled data resetting/wiping random sections of the map</li>
+                <li>Spell Book – Nullify shown as a link on other pages of spellbook</li>
+                <li>Spell Book runes can be clicked on page 1 to go to the beginning of the spell list</li>
+                <li>Runesight displays align number</li>
+                <li>Added a way for GMs to change skin color of player; skin and hair color change scrolls will be coming in the future</li>
+                <li>Token trades can now only be done via a table in game (too much confusion/error with sending to a player name)</li>
+              </ul>
+            </article>
+
+            <article>
               <small class="article-date">FujiQ 7/29/2022</small>
               <p>
                 CHAOS ONLY Hotfix (will be rolled out to H/L at some point as well)
