--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
                  Read more for what’s new in this build. As always…good luck, and happy hunting!! 😉
               </p>
               <ul>
-                ==System Changes==
+              ===System Changes===
                 <li>Pixel Mine Launcher is NO LONGER functional. Use STEAM to launch the games (you are given 5 chances upon launching game to bind to our system, so know your account info please!) </li>
                 <li>Secure.pixelminegames.com will NO LONGER be functional. When we are done with migration, please use CUSTOMER.IRONWILLGAMES.COM (login through steam)</li>
                 <li>Bug report in game will direct to tickets</li>
                 <li>Payments are now launched from the game store, and completed in Steam. We cannot assist you with Steam payments.</li>
               </ul>
-              ==New Features==
+              ===New Features===
               <ul>
                 <li>New combat target reticule</li>
                 <li>Improved GUI saving/loading</li>
@@ -168,7 +168,7 @@
                 <li>Trash Barrels – placed near banks in most cities. Trash around barrel to denote their function. Once used, anything inside is consumed/destroyed. To assist in quick removal of items. This is my finest accomplishment. If only I could put myself into it.</li>
                 <li>Ability for designers to disable taskmasters per server</li>
               </ul>
-              ==Zoning/Alignment==
+              ===Zoning/Alignment===
               <ul>
                 <li>Majority of Krog/Silvest/Whisperdale areas are now safe zones. This extends to an obvious physical barrier such as a river crossing or mountain pass/choke. In Silvest, this is at the guard gate before going to Varg. In Krog, this is at the river crossing on the way to Dawat/VF. In Whisperdale, it is the river crossing just before Darkfell and the mountain pass near Ewwww’s lair. Below ground areas accessible there also safe zones. This extends to all servers where safe zones are enabled (H/L/Ascension). As patron saint of newbs everywhere, I give my blessing to these areas.</li>
                 <li> Majority of cities changed to Divine (white) alignment from Neutral (yellow). Alignment will be more useful moving forward. PLEASE be careful when logging in if you are evil or worse (orange/red names)
@@ -182,7 +182,7 @@
                 <li>Ability for designers to set alignment gain chance per server to assist in making alignment more useful (H/L unchanged, A server will have random chance to gain alignment per kill)</li>
                 <li>Ability for designers to set backpack drop based on alignment to assist in making alignment more useful (H/L unchanged, A server will have reduced chance to drop backpack for players with better reputation)</li>
               </ul>
-              ==More Alignment==
+              ===More Alignment===
               <ul>
                 <li>Killing neutral or better NPCs will lower your reputation</li>
                 <li>Evil or worse players have options for various NPCs that are found in LSP in the evil cities of Lopal/Redwake:
@@ -197,7 +197,7 @@
                 <li>Death as an evil or worse player when NOT wanted will send you to a crim spawn gate</li>
                 <li>VIP Soulstone will send to Lopal tavern instead of LSP if you are evil or worse</li>
               </ul>
-              ==Spawns==
+              ===Spawns===
               <ul>
                 <li>Redid a significant number of spawns in starter areas of Krog/Whisperdale/Silvest and updated the Patron quest system to reflect what is actually in the area</li>
                 <li>Adjust to WW Matriarch spawn; slight respawn, more areas, and chance to spawn while killing pups</li>
@@ -206,7 +206,7 @@
                 <li>Adjusted spawn of slimes/sludges/molds (now only spawn in silvest/krog/whisperdale respectively) and adjusted krog sewer</li>
                 <li>Adjust to scorched island - lower level mobs near entrance, higher level in back. It’s like a mullet, but with Lava Blobs</li>
                </ul>
-               ==Drops==
+               ===Drops===
                <ul>
                 <li>Adjusts to a lot of bosses drop rates/tables/treasure tables. Don’t ask! I don’t even remember.
                   <ul>
@@ -225,7 +225,7 @@
                 <li>Two new Scroll Quests for evil players (Stop the Greedy Gluttons, Secrets of Vampire Bats) which can be turned in to Redwake and Broken Finger Outpost, respectively.</li>
                 <li>Removed silver band from tier 0 (TR item)</li>
               </ul>
-              ==Items==
+              ===Items===
               <ul>
                 <li>Added stats to Wizard Helm (+5 Mage Weap and +5 Mind, added some resists)</li>
                 <li>Added resists to Golden Elven Shield so it’s more interesting, shiny, and shielding, and elven</li>
@@ -236,7 +236,7 @@
                 <li>Loafers 🥖</li>
                 <li>New TR Items: Wyvern Sight, Wyvern’s Talons, Wyvern’s Eye, Warding Amulet of the North, Crystalcloth Belt/Boots, Tormented Set (Req level 85, 50 Int/30 Con)</li>
               </ul>
-              ==More Items==
+              ===More Items===
               Item Adjusts:
               <ul>
                 <li>Adjusted INT req on Staff of Impure (down to 70)</li>
@@ -273,7 +273,7 @@
                 <li>Reduced CON on Bloody Rag of Rumpda</li>
                 <li>Added weapon special for Blade of the Wyvern, Mallet of Reckoning, Dirk of the Unleashed, Edge of the slayer, Frostbow, Deathmaul, Warmage Scathing Axe, Sword of Artraxis (TR items)</li>
               </ul>
-              ==Food==
+              ===Food===
               Enough changs here it warranted its own section
               <ul>
                 <li>Added tooltips to most foods, drinks, potions</li>
@@ -301,7 +301,7 @@
                   </ul>
                 </li>
               </ul>
-              ==Crafting==
+              ===Crafting===
               <ul>
                 <li>Oil of Jandros now does a shield effect (mitigation)</li>
                 <li>Poison Potions/Disease potions instruct player to apply to a weapon</li>
@@ -313,7 +313,7 @@
                 <li>Valinor now includes all mobs or needed drops to make minor potions (warg teeth drop from shaman runts, all others dropped from the relevant mobs)</li>
                 <li>Changed color of text when adding ingredients to alchemist’s mortar so it stands out more “You have added ear of bat..” at least until I can burn that script down with fire and in its ashes raise the PHOENIX Crafting Manager 🤩</li>
               </ul>4
-              ==Quests==
+              ===Quests===
               <ul>
                 <li>Patrons give 1 scroll of return every so often for their city</li>
                 <li>Added pointers to dialogue on Val Clockworks</li>
@@ -325,7 +325,7 @@
                 <li>Fixed Knight of Lotor script when player abandons city faction (was not resetting everything it needed to)</li>
                 <li>More hints/instruction on what to do next when leaving Valinor/completing high level patron quests</li>
               </ul>
-              ==Various Bug Fixes==
+              ===Various Bug Fixes===
               <ul>
                 <li>Several fixes for char create screen (non clickable regions, various crashes)</li>
                 <li>Incorrect targeting feedback when creature is not in line of sight but in range</li>
@@ -351,7 +351,7 @@
                 <li>Projectiles ie arrows now draw properly if play area moved</li>
                 <li>Client now given a proper name, Ashen Empires</li>
               </ul>  
-              ==Junk Drawer==  
+              ===Junk Drawer===  
               <ul>  
                 <li>Added ladder in Orc Fort Tunnel to a previously inaccessible area</li>
                 <li>Dungeons of Dransik is now completely disabled; any products related to it (teleport stones, portals, bindings, etc) are now not functional. We are not able to support this extension any longer.</li>
