Add new images, new guides

--- a/patchNotes2020.html
+++ b/patchNotes2020.html
@@ -73,7 +73,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="guides.html">Guides</a>
+                            <a class="nav-link" href="quest.html">Quest</a>
                         </li>
                     </ul>
                 </div>
