--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -297,7 +297,7 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="guides.html">Guides</a>
+                                <a class="nav-link" href="quest.html">Quest</a>
                             </li>
                         </ul>
                     </div>
@@ -320,13 +320,13 @@
                     </div>
                     <div class="flex-wrapper">
                       <div>
-                        <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle.png" alt="Valinor Castle Map">
+                        <img class="npc-img img-map-height" src="Images/Valinor/Maps/Valinor_Castle.png" alt="Valinor Castle Map">
                       </div>
                       <div>
-                        <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle_Underground.png" alt="Valinor Castle Underground Map">
+                        <img class="npc-img img-map-height" src="Images/Valinor/Maps/Valinor_Castle_Underground.png" alt="Valinor Castle Underground Map">
                       </div>
                       <div>
-                        <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle_Outside.png" alt="Valinor Castle Outside Map">
+                        <img class="npc-img img-map-height" src="Images/Valinor/Maps/Valinor_Castle_Outside.png" alt="Valinor Castle Outside Map">
                       </div>                  
                     </div>
                   </div>                  
