--- a/patchNotes2021.html
+++ b/patchNotes2021.html
@@ -73,7 +73,7 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="guides.html">Guides</a>
+                                <a class="nav-link" href="quest.html">Quest</a>
                             </li>
                             <li class="nav-item">
                         </ul>
