--- a/quest.html
+++ b/quest.html
@@ -142,7 +142,7 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="guides.html">Guides</a>
+                                <a class="nav-link" href="quest.html">Quest</a>
                             </li>
                         </ul>
                     </div>
