Added new patch notes

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Valinor Quest Guides-->
+              <!-- End of Quest Guides-->
 
             
             <p></p>
@@ -215,6 +215,78 @@
 
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
+            <div class="body-line"></div>
+            
+            <article>
+              <small class="article-date">FujiQ 9/7/2022</small>
+              <p>
+                ===System===
+              </p>
+              <ul>
+                <li>Game Crash: Closing All Chat Windows.</li>
+                <li>Clicking Buy Tokens should check for Steam Overlay and explain how to turn it on if it's off</li>
+                <li>Alignment gain on killing evil players.</li>
+                <li>Player Pets Remain After Teleporting Away on Guard/Stay</li>
+                <li>Store product Name Change! allows player to go beyond the cahar limit presented in Char Create</li>
+                <li>Fix for epool on advanced skills (Block, Dodge, Crit Hit, Crit Heal, Double Attack, Extended Duration)</li>
+              </ul>  
+              ===Alignment===
+              <ul>
+                <li>Fixed for reputation gain when attacking players of lower reputation - should not move reputation # at all in this instance.</li>
+                <li>NPC Crims Hanvik/Lonvia/Tarvan no longer make you go wanted for attacking them</li>
+                <li>Killing any animal that is neutral or better will not change alignment either way (chickens, gazelle, deer, dolphin, etc)</li>
+                <li>Killing Humanoid NPCs that are neutral or better will cause you to LOSE 5 reputation per kill (most bipedal townsfolk/guards/etc)</li>
+                <li>Adjusted alignment loss for going wanted/killing players (see Discord for exact #)</li>
+              </ul>
+              ===Items===
+              <ul>
+                <li>Fixed the formatting for tooltips on several items (Reinforced Battle Axe, Champion Axe, Pristine Baton, Crossbow of the Viper, Soldiers Light Crossbow)</li>
+                <li>Updated material/tooltip on legacy cloak to reflect leadership bonus</li>
+                <li>Adjusted weight of newbie small blades (rusty pocket knife, lead dirk, woven blade, shiny dagger)</li>
+                <li>Updated resists on Valekar's and Azure Silk up to 5% from 2/3%)</li>
+              </ul>
+              ===Creatures===
+              <ul>
+                <li>Changed alert distance on Blackwidow Hatchlings to smaller radius</li>
+                <li>Removed Dalvon Armor treasure from Master Blaster to discourage camping.</li>
+                <li>Updated drop chances for Snagglefang, Deadwillows, Wasp Warriors, Deadwillow Roots, Ice Fragments</li>                
+              </ul>
+              ===Quests===
+              <ul>
+                <li>Fix for trainers. A flag wasn't being set after reward on some of the trainers, blunts in particular.</li>
+                <li>Removed restriction on CK/LK(you can do both now at same time)</li>
+                <li>Added 1 item reward from Dalvon Miner in additon to ring. Player can select Armor, Leggings, or Helm. Gloves/boots must be hunted for in the cave. All pieces drop from mobs in the cave as well.</li>
+                <li>Removed sleleton pups from Silvest patron quest</li>
+                <li>Removed spider queen from Lotorian Knight quest mob list</li>
+                <li>Added id skill exp to reward from LK quest, and points towards individual mob (same calc as ID calc)</li>
+                <li>Anton Darushk will ask for neutral or worse aligned player (was evil or worse) during Warlord quest stage that requires you to start that town's mini quest</li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>Replaced banker in Gulley with on that wasn't evil</li>
+                <li>Moved a barrel bloacking room in Fort Eastwatch</li>
+              </ul>
+              ===Misc===
+              <ul>
+                <li>Fix for Fixhing Pole capacity check</li>
+                <li>Fix for Deadwillows - they were marked as a corpse in editor, mage spells could not cast on them</li>
+                <li>Gave more info to warning message on lighting kindling in town (can light in safe zones, just not in towns)</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 9/5/2022</small>
+              <p>
+                Hotfix
+              </p>
+              <ul>
+                <li>Fix for trainers. A flag wasn't being set after reward on some of the trainers, blunts in particular. If still haveing issues, a GM will have to fix you up. Apologies for that inconvenience! </li>
+                <li>Removed restriction on CK/LK (you can do both now at same time)</li>
+                <li>Fix for Fishing Pole capacity check</li>
+                <li>Added 1 item reward from Dalvon Miner in addition to ring. Player can select Armor, Leggings, or Helm. Glove/boots must be hunted fro in the cave. All pieces drop from mobs in the cave as well.</li>
+                <li>Removed skeleton pups from Silvest patron quest</li>
+              </ul>  
+            </article>
             <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 9/2/2022</small>
@@ -450,7 +522,7 @@
                 <li>Token trades can now only be done via a table in game (too much confusion/error with sending to a player name)</li>
               </ul>
             </article>
-
+            <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 7/29/2022</small>
               <p>
