Added new patch notes.

--- a/index.html
+++ b/index.html
@@ -216,8 +216,27 @@
 
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
-            <div class="body-line"></div>
             
+
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 9/8/2022</small>
+              <ul>
+                <li>Some monitors/ resolutions crop title screens weird</li>
+                <li>Druid Staff sometimes summons a rogue wyvern</li>
+                <li>Game Crash: Closing all windows</li>
+                <li>Cannot type in a quantity when buying/selling in shop</li>
+                <li>Backpack dropping on H/L not following drop config</li>
+                <li>Fix for slop buckets</li>
+                <li>Resale value of fertilizer reduced</li>
+                <li>Rmoved soloable tag from Minor Storm Giants, Weakened Ettins</li>
+                <li>Adjusted spawns in Proudblood Valley slightly</li>
+                <li>Reduced planting difficulty of Bloodroot</li>
+                <li>Capped Ice Bolt damage at 550</li>
+              </ul>              
+            </article>
+            <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 9/7/2022</small>
               <p>
